--- a/kubernetes/flask-deployment.yml
+++ b/kubernetes/flask-deployment.yml
@@ -1,15 +1,17 @@
+ 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   creationTimestamp: null
-  labels: 
+  labels:
     name: flask
   name: flask
 spec:
   progressDeadlineSeconds: 2147483647
   replicas: 1
   selector:
-    matchLabels: flask
+    matchLabels:
+      app: flask
   template:
     metadata:
       creationTimestamp: null
@@ -17,7 +19,29 @@ spec:
         app: flask
     spec:
       containers:
-        - env:
-          - name: FLASK_ENV
-            value: development
-            
+      - env:
+        - name: FLASK_ENV
+          value: development
+        - name: APP_SETTINGS
+          value: project.config.DevelopmentConfig
+        - name: POSTGRES_USER
+          valueFrom:
+            secretKeyRef:
+              key: user
+              name: postgres-credentials
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: password
+              name: postgres-credentials
+        image: mjhea0/flask-kubernetes:latest
+        imagePullPolicy: Always
+        name: flask
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
