Finalized kubernetes deployment for minikube
Still may need to make a different ingress for
an actual kubernetes cluster deployment, but
for now this will work until I figure out what
I want to do for an actual kubernetes cluster

--- a/kubernetes/flask-deployment.yml
+++ b/kubernetes/flask-deployment.yml
@@ -34,7 +34,7 @@ spec:
             secretKeyRef:
               key: password
               name: postgres-credentials
-        image: mjhea0/flask-kubernetes:latest
+        image: erikanderson7/geoquiz:latest
         imagePullPolicy: Always
         name: flask
         resources: {}
