--- a/kubernetes/minikube-ingress.yml
+++ b/kubernetes/minikube-ingress.yml
@@ -6,7 +6,7 @@ metadata:
   annotations:
 spec:
   rules:
-  - host: geoquiz.io
+  - host: internal.geoquiz.io
     http:
       paths:
       - path: /
