--- a/kubernetes/postgres-deployment.yml
+++ b/kubernetes/postgres-deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:12.1-alpine
+        image: erikanderson7/geoquiz_db
         env:
           - name: POSTGRES_USER
             valueFrom:
