--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./application/backend/
       dockerfile: Dockerfile
     ports:
-      - 5001:5000
+      - 5002:5000
     environment:
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
@@ -25,3 +25,10 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+  multiplayer:
+    build:
+      context: ./application/multiplayer
+      dockerfile: Dockerfile
+    ports: 
+      - 5003:5002
