--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,21 @@ services:
       dockerfile: Dockerfile
     ports: 
       - 5002:5000
+  
+  multiplayer-db:
+    image: mongo:4.2-bionic
+    expose:
+      - 27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: multiplayer-games
+  
+  multiplayer-db-express:
+    image: mongo-express
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_SERVER: multiplayer-db
