--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,21 +32,25 @@ services:
       dockerfile: Dockerfile
     ports: 
       - 5002:5000
+    environment:
+      - MONGODB_USER=mongo
+      - MONGODB_PASSWORD=mongo
   
   multiplayer-db:
     image: mongo:4.2-bionic
+    restart: always
     expose:
       - 27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: multiplayer-games
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: mongo
   
   multiplayer-db-express:
     image: mongo-express
+    restart: always
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
+      ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
       ME_CONFIG_MONGODB_SERVER: multiplayer-db
