--- a/kubernetes/geoquiz-service.yml
+++ b/kubernetes/geoquiz-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask
+  name: geoquiz
   labels:
-    service: flask
+    service: geoquiz
 spec:
   selector:
-    app: flask
+    app: geoquiz
   ports:
   - port: 5000
     targetPort: 5000
