--- a/kubernetes/postgres-secret.yml
+++ b/kubernetes/postgres-secret.yml
@@ -5,5 +5,5 @@ metadata:
   name: postgres-credentials
 type: Opaque
 data:
-  user: c2FtcGxl
-  password: cGxlYXNlY2hhbmdlbWU=
+  user: cG9zdGdyZXNhZG1pbg==
+  password: Ulc1SGJnTTdoVDg4QkVEaA==
