--- a/kubernetes/multiplayer-deployment.yml
+++ b/kubernetes/multiplayer-deployment.yml
@@ -36,7 +36,7 @@ spec:
               name: multiplayer-db-credentials
         image: erikanderson7/geoquiz-multiplayer:latest
         imagePullPolicy: Always
-        name: flask
+        name: geoquiz-multiplayer
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
