Refactoring, added comments, removed unused stuff

--- a/kubernetes/geoquiz-deployment.yml
+++ b/kubernetes/geoquiz-deployment.yml
@@ -23,7 +23,7 @@ spec:
         - name: FLASK_ENV
           value: development
         - name: APP_SETTINGS
-          value: project.config.DevelopmentConfig
+          value: project.config.ProductionConfig
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
