--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     ports: 
       - 5002:5000
     environment:
+      - FLASK_ENV=development
+      - APP_SETTINGS=project.config.DevelopmentConfig
       - MONGODB_USER=mongo
       - MONGODB_PASSWORD=mongo
   
