Updated scripts and removed logging from javascript files

--- a/apache/multiplayer.geoquiz.io.conf
+++ b/apache/multiplayer.geoquiz.io.conf
@@ -2,9 +2,9 @@
 	Servername multiplayer.geoquiz.io
 
     RewriteEngine on
-    RewriteCond ${HTTP:Upgrade} websocket [NC]
-    RewriteCond ${HTTP:Connection} upgrade [NC]
-    RewriteRule .* "ws://internal.multiplayer.geoquiz.io/$1" [P,L]
+    RewriteCond %{REQUEST_URI} ^/socket.io [NC]
+    RewriteCond %{QUERY_STRING} transport=websocket [NC]
+    RewriteRule /(.*) "ws://internal.multiplayer.geoquiz.io/$1" [P,L]
 
 	ProxyPass / http://internal.multiplayer.geoquiz.io/
     ProxyPassReverse / http://internal.multiplayer.geoquiz.io/
